Fixed state value to be memo and aligned points and buttons in user participations
https://github.com/SoftUni-Internal/exam-systems-issues/issues/1194

--- a/Servers/UI/OJS.Servers.Ui/ClientApp/src/components/contests/contest-card/ContestCard.module.scss
+++ b/Servers/UI/OJS.Servers.Ui/ClientApp/src/components/contests/contest-card/ContestCard.module.scss
@@ -63,13 +63,19 @@
 }
 
 .contestBtnsWrapper {
-  .contestBtn {
-    font-size: variables.$f-size-16;
-
-    > div {
-      align-items: center;
-      display: flex;
-      margin-right: spacings.$sp-12;
+  display: flex;
+  flex-direction: column;
+  font-size: variables.$f-size-16;
+  
+  .buttonAndPointsLabelWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: spacings.$sp-12;
+    
+    .points {
+      flex: 1;
+      text-align: right;
     }
 
     &:nth-child(2) {
